Fix swith-button on mobile

--- a/client/src/components/Header.module.css
+++ b/client/src/components/Header.module.css
@@ -34,8 +34,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 30px;
-    height: 30px;
+    width: 40px;
+    height: 32px;
     transform: translateY(-5px);
 }
 
